# ENSC351-GroupAssignment

./: .gitignore  CMakeLists.txt  README.md  readme.MD
app/: CMakeLists.txt  NOTES.txt  as2UdpGui.py  light_dip_detector.c  light_sampler.c  noworky.c  read_spi.py  rotary_test.cpp  working_sensor.txt
app/misc/:  rotary_test2.c  command_line_for_rotary.sh
hal/: CMakeLists.txt
hal/include/hal/: PWM.h  SPI.h  UDP.h  joystick.h  periodTimer.h  rotary_encoder.h  sampler.h
hal/src/: PWM.c  SPI.c  UDP.c  joystick.c  noworky.c  periodTimer.c  rotary_encoder.c  sampler.c
